thêm file bài 5 và bài 7

--- a/lesson-05-practice-05.html
+++ b/lesson-05-practice-05.html
@@ -45,7 +45,7 @@
 </style>
 </head>
 <body>
-    <h1>THỜI KHÓA BIỂU</h1>
+    <h1 style="text-align:center;">THỜI KHÓA BIỂU</h1>
     <table>
     <tr>
         <th rowspan=2>Thứ</th>
