--- a/lesson-06-practice-01.html
+++ b/lesson-06-practice-01.html
@@ -7,11 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <table =+border="1">
-        <tr>
-            <th>Tên</th>
-            <th>Tuổi</th>
-        </tr>
-    </table>
+    <div id="messageDiv"></div>
+    <button type="button" onclick="showMessage();">Click Me!</button>
+   
+     
+  <script>
+  function showMessage(){
+     console.log('Xin chào!');
+ }
+  </script>
+
+     
 </body>
 </html>
