--- a/lesson-05-practice-01.html
+++ b/lesson-05-practice-01.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <title>[Thực hành] Tạo form cơ bản</title>
 </head>
 <body>
     <style>
@@ -20,6 +20,7 @@
             <option>B (+  0.5$)</option>
             <option>C (+  0.5$)</option>
         </select>
+        <br>
         <input type="radio" name="rd"/> 1 - $10 <br/>
         <input type="radio" name="rd"/> 2 - $20 <br/>
         <input type="radio" name="rd"/> 3 - $25 <br/>
