thêm file bài 9.2

--- a/lesson-09-exercise-02.html
+++ b/lesson-09-exercise-02.html
@@ -30,18 +30,18 @@
                 case 8:
                 case 10:
                 case 12:
-                text = "Tháng" + "" + month1 + "" + "có 31 ngày";
+                text = "Tháng "  + month1 + " có 31 ngày";
                 break;
 
                 case 4:
                 case 6:
                 case 9:
                 case 11:
-                text = "Tháng" + "" + month1 + "" + "có 30 ngày";
+                text = "Tháng "  + month1 + " có 30 ngày";
                 break;
 
                 case 2:
-                text = "Tháng" + "" + month1 + "" + "có 28 hoặc 29 ngày";
+                text = "Tháng "  + month1 + " có 28 hoặc 29 ngày";
                 break;
                 
                 default:
